Fixed bug with menu and weather cards on mobile platform

--- a/Frontend/css/weather-cards.css
+++ b/Frontend/css/weather-cards.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1091px) {
+@media only screen and (min-width: 1291px) {
     /* Desktop and big screen*/
     .weather-card-big {
         display: inline-block;
@@ -8,6 +8,9 @@
         padding: 8px;
         text-decoration: none;
         opacity: 0.8;
+
+        z-index: -1;
+        position: relative;
 
         color: azure;
         font-size: 22px;
@@ -30,10 +33,11 @@
     }
 }
 
-@media only screen and (max-width: 1090px) {
+@media only screen and (max-width: 1290px) {
     /* Phones */
     .weather-card-big {
-        display: inline-block;
+        position: relative;
+        display: block;
         align-items: center;
         background-color: rgba(24, 78, 101, 0.6);
         border-radius: 15px;
@@ -42,7 +46,8 @@
         opacity: 0.8;
 
         color: azure;
-        font-size: 20px;
+        z-index: -1;
+        font-size: 18px;
         font-family: "Open Sans", sans-serif;
     }
 
